[gd_scene load_steps=13 format=3 uid="uid://dhpi76cgyo0p1"]

[ext_resource type="Script" uid="uid://db3hmrw7qoqbt" path="res://bigdoor.gd" id="1_e4luo"]

[sub_resource type="Animation" id="Animation_e4luo"]
resource_name = "open"
length = 5.031
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hinge:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1, 3.08, 4.76667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-1.12016, 0.781327, 0), Vector3(-1.12016, 0.781327, 0), Vector3(-1.12016, 0.781327, 0), Vector3(-1.12016, 0.781327, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hinge:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.13333, 3.08, 4.73333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.212592, 0), Vector3(0, -1.28389, 0), Vector3(0, -1.52566, 0)]
}

[sub_resource type="Animation" id="Animation_30h8q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hinge:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.12016, 0.781327, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hinge:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_30h8q"]
_data = {
&"RESET": SubResource("Animation_30h8q"),
&"open": SubResource("Animation_e4luo")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_e4luo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0ywxj"]
albedo_color = Color(0.329631, 0.0361265, 0.124684, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e4luo"]
albedo_color = Color(2.31028e-06, 0.570801, 0.874041, 1)
metallic = 0.8
metallic_specular = 0.0

[sub_resource type="PlaneMesh" id="PlaneMesh_30h8q"]
material = SubResource("StandardMaterial3D_e4luo")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_30h8q"]
albedo_color = Color(0.484948, 0.499081, 0.0770515, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_7s2dm"]
material = SubResource("StandardMaterial3D_30h8q")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7s2dm"]
albedo_color = Color(1, 1, 0.0941176, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_32kme"]
material = SubResource("StandardMaterial3D_7s2dm")
top_radius = 0.26
bottom_radius = 0.29
height = 0.625

[node name="bigdoor" type="Node3D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_30h8q")
}

[node name="hinge" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.12016, 0.781327, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="hinge"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.12016, -0.781327, 0)
script = ExtResource("1_e4luo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="hinge/StaticBody3D"]
transform = Transform3D(2.71958, 0, 0, 0, 4.71215, 0, 0, 0, 0.634586, 0.233814, 1.37269, -0.00163555)
shape = SubResource("BoxShape3D_e4luo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="hinge/StaticBody3D"]

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="hinge/StaticBody3D"]

[node name="CSGBox3D" type="CSGBox3D" parent="hinge/StaticBody3D/CSGCombiner3D"]
transform = Transform3D(0.573803, 0, 0, 0, 0.997367, 0, 0, 0, 0.997367, 0.251089, 1.22119, -0.0222473)
size = Vector3(4.79222, 3.44238, 0.53949)
material = SubResource("StandardMaterial3D_0ywxj")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="hinge/StaticBody3D/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.29048e-09, 1, 0, -0.0981548, -4.37114e-08, 0.80624, 1.44606, -0.301618)
operation = 2
radius = 0.29
sides = 20

[node name="CSGCylinder3D3" type="CSGCylinder3D" parent="hinge/StaticBody3D/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.29048e-09, 1, 0, -0.0981548, -4.37114e-08, -0.366784, 1.43603, -0.303762)
operation = 2
radius = 0.29
sides = 20

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="hinge/StaticBody3D/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.29048e-09, 1, 0, -0.0981548, -4.37114e-08, 0.221566, 2.10112, -0.301618)
operation = 2
radius = 0.29
sides = 20

[node name="MeshInstance3D2" type="MeshInstance3D" parent="hinge/StaticBody3D"]
transform = Transform3D(1.17054, 0, 0, 0, 0.0115364, 0.999934, 0, -0.999934, 0.0115364, 0.244583, 1.66759, -0.213035)
mesh = SubResource("PlaneMesh_30h8q")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="hinge/StaticBody3D"]
transform = Transform3D(0.2, 0, 0, 0, -1.31134e-08, 0.2, 0, -0.3, -8.74228e-09, 1.32104, 0.992099, -0.192439)
mesh = SubResource("CylinderMesh_7s2dm")

[node name="coin1" type="MeshInstance3D" parent="hinge"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1.93213, 0.662964, 0)
visible = false
mesh = SubResource("CylinderMesh_32kme")
skeleton = NodePath("../..")

[node name="coin2" type="MeshInstance3D" parent="hinge"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.760048, 0.662964, 0)
visible = false
mesh = SubResource("CylinderMesh_32kme")
skeleton = NodePath("../..")

[node name="coin3" type="MeshInstance3D" parent="hinge"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1.34202, 1.31025, 0)
visible = false
mesh = SubResource("CylinderMesh_32kme")
skeleton = NodePath("../..")
